add 3rd party libs to make it runnable locally.

--- a/demos/languages.html
+++ b/demos/languages.html
@@ -12,7 +12,7 @@
 <script>
 
 	$(document).ready(function() {
-		var currentLangCode = 'en';
+		var currentLangCode = 'zh-cn';
 
 		// build the language selector's options
 		$.each($.fullCalendar.langs, function(langCode) {
